パーシャルファイルとして切り出し

--- a/app/views/sales_reports/index.html.erb
+++ b/app/views/sales_reports/index.html.erb
@@ -1,82 +1,7 @@
 <%# ページヘッダー %>
 <div class="container mx-auto px-4 py-8">
-  <%# CSVインポートフォーム %>
-  <div class="card bg-base-100 shadow-xl mb-8">
-    <div class="card-body">
-      <h3 class="card-title text-base-content mb-6">CSVファイルインポート</h3>
-      <%= form_with url: import_data_imports_path, local: true, method: :post, multipart: true do |f| %>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-          <div class="form-control w-full">
-            <%= f.label :import_type, "インポート種別", class: "label font-medium" %>
-            <%= f.select :import_type, [
-              ["Filtered Data Sheet", "filtered_data_sheet"],
-              ["eBay Sales Report", "ebay_sales_report"],
-              ["Cpass Shipping Cost", "cpass_shipping_cost"],
-              ["eBay Transaction Report", "ebay_transaction_report"]
-            ], {}, { class: "select select-bordered w-full focus:select-primary" } %>
-          </div>
-
-          <div class="form-control w-full">
-            <%= f.label :file, "CSVファイル", class: "label font-medium" %>
-            <%= f.file_field :file, class: "file-input file-input-bordered w-full focus:file-input-primary", accept: ".csv" %>
-          </div>
-        </div>
-
-        <div class="mt-6">
-          <%= f.submit "インポート", class: "btn btn-primary" %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-
-  <%# 検索フォーム %>
-  <div class="card bg-base-100 shadow-xl mb-8">
-    <div class="card-body space-y-6">
-      <%= search_form_for @q, url: sales_reports_path do |f| %>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-          <div class="form-control w-full">
-            <%= f.label :order_number_cont, "注文番号", class: "label font-medium" %>
-            <%= f.search_field :order_number_cont, class: "input input-bordered w-full focus:input-primary" %>
-          </div>
-
-          <div class="form-control w-full">
-            <%= f.label :shipment_tracking_number_cont, "追跡番号", class: "label font-medium" %>
-            <%= f.search_field :shipment_tracking_number_cont, class: "input input-bordered w-full focus:input-primary" %>
-          </div>
-
-          <div class="form-control w-full">
-            <%= f.label :order_sku_links_sku_sku_code_cont, "SKUコード", class: "label font-medium" %>
-            <%= f.search_field :order_sku_links_sku_sku_code_cont, class: "input input-bordered w-full focus:input-primary" %>
-          </div>
-
-          <div class="form-control w-full">
-            <%= f.label :sale_date_gteq, "販売日（から）", class: "label font-medium" %>
-            <%= f.date_field :sale_date_gteq, class: "input input-bordered w-full focus:input-primary" %>
-          </div>
-
-          <div class="form-control w-full">
-            <%= f.label :sale_date_lteq, "販売日（まで）", class: "label font-medium" %>
-            <%= f.date_field :sale_date_lteq, class: "input input-bordered w-full focus:input-primary" %>
-          </div>
-
-          <div class="form-control w-full">
-            <%= f.label :sale_order_net_amount_gteq, "売上金額（以上）", class: "label font-medium" %>
-            <%= f.number_field :sale_order_net_amount_gteq, class: "input input-bordered w-full focus:input-primary" %>
-          </div>
-
-          <div class="form-control w-full">
-            <%= f.label :sale_order_net_amount_lteq, "売上金額（以下）", class: "label font-medium" %>
-            <%= f.number_field :sale_order_net_amount_lteq, class: "input input-bordered w-full focus:input-primary" %>
-          </div>
-        </div>
-
-        <div class="mt-8 flex justify-end gap-3">
-          <%= link_to "リセット", sales_reports_path, class: "btn btn-ghost hover:btn-error" %>
-          <%= f.submit "検索", class: "btn btn-primary" %>
-        </div>
-      <% end %>
-    </div>
-  </div>
+  <%= render 'csv_import_form' %>
+  <%= render 'search_form' %>
 
   <%# データテーブル %>
   <div class="card bg-base-100 shadow-xl overflow-x-auto">
