--- a/app/views/components/navigation/_header.html.erb
+++ b/app/views/components/navigation/_header.html.erb
@@ -11,20 +11,16 @@
     </button>
   </div>
 
-  <%# 中央のコンテンツ（必要に応じて追加） %>
-  <div class="navbar-center"></div>
+  <%# 中央のコンテンツ - タブナビゲーション %>
+  <div class="navbar-center">
+    <div role="tablist" class="tabs-boxed tabs">
+      <%= link_to "売上レポート", sales_reports_path, role: "tab", class: "tab #{controller_name == 'sales_reports' ? 'tab-active' : ''}" %>
+      <%= link_to "PLレポート", plreports_path, role: "tab", class: "tab #{controller_name == 'plreports' ? 'tab-active' : ''}" %>
+    </div>
+  </div>
 
   <%# 右側のコンテンツ %>
   <div class="navbar-end gap-1.5">
-    <%# Theme Toggle - テーマ切り替えボタン %>
-    <button
-      aria-label="Theme toggler"
-      class="btn btn-circle btn-ghost btn-sm"
-      data-action="theme#toggle">
-      <iconify-icon icon="lucide:sun" height="20" class="hidden dark:inline"></iconify-icon>
-      <iconify-icon icon="lucide:moon" height="20" class="inline dark:hidden"></iconify-icon>
-    </button>
-
     <%# Profile With Action Item - プロフィールドロップダウン %>
     <div class="dropdown dropdown-end dropdown-bottom">
       <label tabindex="0" class="btn btn-ghost rounded-btn px-1.5 hover:bg-base-content/20">
