--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,13 @@
   </head>
 
   <body>
-    <div class="size-full flex">
-      <div class="flex" data-controller="leftbar">
-        <div data-leftbar-target="leftbar">
-          <%= render 'components/navigation/leftbar' %>
-        </div>
-      </div>
+    <div class="size-full">
       <div class="main-wrapper overflow-auto">
         <div class="flex h-full flex-col">
           <%= render 'components/navigation/header' %>
-            <div class="content-wrapper">
-              <%= render 'shared/flash_messages' %>
-              <%= yield %>
-            </div>
+          <div class="content-wrapper">
+            <%= render 'shared/flash_messages' %>
+            <%= yield %>
           </div>
         </div>
       </div>
