--- a/app/views/sales_reports/_search_form.html.erb
+++ b/app/views/sales_reports/_search_form.html.erb
@@ -1,7 +1,7 @@
-<div class="card bg-base-100 mb-8">
+<div class="card bg-base-100 shadow-md mb-8">
   <div class="card-body space-y-6">
     <%= search_form_for @q, url: sales_reports_path do |f| %>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-6">
         <% search_form_fields.each do |field| %>
           <%= search_form_field(f, field[:name], field[:label], field_type: field[:field_type]) %>
         <% end %>
