--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
 
   <body>
     <div class="size-full">
-      <div class="main-wrapper overflow-auto">
+      <div class="main-wrapper overflow-auto w-full min-h-screen">
         <div class="flex h-full flex-col">
           <%= render 'components/navigation/header' %>
-          <div class="content-wrapper">
+          <div class="content-wrapper pt-16">
             <%= render 'shared/flash_messages' %>
             <%= yield %>
           </div>
