--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -5,4 +5,9 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="page gap"><%= t('views.pagination.truncate').html_safe %></span>
+<% content = content_tag(:button,
+  t('views.pagination.truncate').html_safe,
+  class: "btn join-item btn-sm btn-disabled",
+  disabled: true
+) %>
+<%= content %>
