--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -6,6 +6,12 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="next">
-  <%= link_to_unless current_page.last?, t('views.pagination.next').html_safe, url, rel: 'next', remote: remote %>
-</span>
+<%# 次へボタン用のパーシャル %>
+<% content = content_tag(:button,
+  raw('<iconify-icon icon="lucide:chevron-right" height="16"></iconify-icon>'),
+  class: "btn join-item btn-sm gap-2",
+  "aria-label": "pagination-next",
+  disabled: current_page.last?
+) %>
+
+<%= link_to_unless current_page.last?, content, url, remote: remote, rel: "next" %>
