--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -1,13 +1,13 @@
-<%# The container tag
-  - available local variables
-    current_page:  a page object for the currently displayed page
-    total_pages:   total number of pages
-    per_page:      number of items to fetch per page
-    remote:        data-remote
-    paginator:     the paginator that renders the pagination tags inside
+<%# メインのページネーションコンテナ
+  # - 利用可能なローカル変数
+  #   current_page:  現在表示されているページのオブジェクト
+  #   total_pages:   総ページ数
+  #   per_page:      1ページあたりの表示件数
+  #   remote:        data-remote
+  #   paginator:     ページネーションタグをレンダリングするページネータ
 -%>
 <%= paginator.render do -%>
-  <nav class="pagination" role="navigation" aria-label="pager">
+  <div class="join flex items-center" role="navigation" aria-label="pager">
     <%= first_page_tag unless current_page.first? %>
     <%= prev_page_tag unless current_page.first? %>
     <% each_page do |page| -%>
@@ -21,5 +21,5 @@
       <%= next_page_tag unless current_page.last? %>
       <%= last_page_tag unless current_page.last? %>
     <% end %>
-  </nav>
+  </div>
 <% end -%>
