--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -6,6 +6,11 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="prev">
-  <%= link_to_unless current_page.first?, t('views.pagination.previous').html_safe, url, rel: 'prev', remote: remote %>
-</span>
+<% content = content_tag(:button,
+  raw('<iconify-icon icon="lucide:chevron-left" height="16"></iconify-icon>'),
+  class: "btn join-item btn-sm gap-2",
+  "aria-label": "pagination-prev",
+  disabled: current_page.first?
+) %>
+
+<%= link_to_unless current_page.first?, content, url, remote: remote, rel: "prev" %>
