--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="<%= I18n.locale %>" data-theme="light" data-controller="theme">
   <head>
-    <title>認証 | PartsSync</title>
+    <title><%= content_for?(:title) ? yield(:title) : "認証" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,35 +10,8 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body class="bg-gray-50 min-h-screen">
-    <%# 認証ページ用のシンプルなレイアウト %>
-    <div class="flex min-h-screen flex-col justify-center py-12 sm:px-6 lg:px-8">
-      <div class="sm:mx-auto sm:w-full sm:max-w-md">
-        <%# ロゴ部分 %>
-        <h2 class="text-center text-2xl font-bold tracking-tight text-gray-900">
-          <%= link_to root_path do %>
-            PartsSync
-          <% end %>
-        </h2>
-      </div>
-
-      <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-        <div class="bg-white px-4 py-8 shadow sm:rounded-lg sm:px-10">
-          <%# フラッシュメッセージ %>
-          <% if notice %>
-            <div class="alert alert-info mb-4">
-              <%= notice %>
-            </div>
-          <% end %>
-          <% if alert %>
-            <div class="alert alert-error mb-4">
-              <%= alert %>
-            </div>
-          <% end %>
-
-          <%= yield %>
-        </div>
-      </div>
-    </div>
+  <body>
+    <%= render 'shared/flash_messages' %>
+    <%= yield %>
   </body>
 </html>
