--- a/app/views/sales_reports/_csv_import_form.html.erb
+++ b/app/views/sales_reports/_csv_import_form.html.erb
@@ -3,7 +3,7 @@
   <div class="card-body">
     <h3 class="card-title text-base-content mb-6">CSVファイルインポート</h3>
     <%= form_with url: import_data_imports_path, local: true, method: :post, multipart: true do |f| %>
-      <div class="flex gap-6">
+      <div class="grid grid-cols-1 md:grid-cols-5 gap-6">
         <div class="form-control">
           <%= f.label :import_type, "インポート種別", class: "label font-medium" %>
           <%= f.select :import_type, [
@@ -13,15 +13,14 @@
             ["eBay Transaction Report", "ebay_transaction_report"]
           ], {}, { class: "select select-bordered w-full focus:select-primary" } %>
         </div>
-
-        <div class="form-control">
+        <div class="form-control md:col-span-2">
           <%= f.label :file, "CSVファイル", class: "label font-medium" %>
           <%= f.file_field :file, class: "file-input file-input-bordered w-full focus:file-input-primary", accept: ".csv" %>
         </div>
-      </div>
 
-      <div class="mt-6">
-        <%= f.submit "インポート", class: "btn btn-primary" %>
+        <div class="md:col-span-2 flex justify-end items-end">
+          <%= f.submit "インポート", class: "btn btn-primary h-12" %>
+        </div>
       </div>
     <% end %>
   </div>
