--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,6 @@
-<p>Welcome <%= @email %>!</p>
+<%# メールアドレス確認メール %>
+<p><%= t('.greeting', email: @email) %></p>
 
-<p>You can confirm your account email through the link below:</p>
+<p><%= t('.message') %></p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to t('.action'), confirmation_url(@resource, confirmation_token: @token), class: 'button' %></p>
