--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,7 +11,25 @@
   </head>
 
   <body>
-    <%= render 'shared/flash_messages' %>
+    <%# フラッシュメッセージ %>
+    <% if notice %>
+      <div class="alert alert-info shadow-lg fixed top-4 left-1/2 -translate-x-1/2 z-50 w-auto min-w-[320px] max-w-[90%]">
+        <div>
+          <iconify-icon icon="lucide:info" class="text-info"></iconify-icon>
+          <span><%= notice %></span>
+        </div>
+      </div>
+    <% end %>
+
+    <% if alert %>
+      <div class="alert alert-error shadow-lg fixed top-4 left-1/2 -translate-x-1/2 z-50 w-auto min-w-[320px] max-w-[90%]">
+        <div>
+          <iconify-icon icon="lucide:alert-triangle" class="text-error"></iconify-icon>
+          <span><%= alert %></span>
+        </div>
+      </div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
