--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -35,8 +35,8 @@
       <div class="flex items-center justify-between">
         <!--  Start: Logo -->
         <div class="inline">
-          <%= image_tag('logo/logo-dark.svg', alt: "logo-dark", loading: "lazy", width: 86, height: 24, class: "hidden dark:inline") %>
-          <%= image_tag('logo/logo-light.svg', alt: "logo-light", loading: "lazy", width: 86, height: 24, class: "inline dark:hidden") %>
+          <%= image_tag "logo/parts-sync-logo.svg", alt: "Parts Sync", loading: "lazy", class: "hidden dark:inline h-12 w-auto" %>
+          <%= image_tag "logo/parts-sync-logo.svg", alt: "Parts Sync", loading: "lazy", class: "inline dark:hidden h-12 w-auto" %>
         </div>
         <!--  End: Logo -->
 
