--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -30,8 +30,7 @@
     <div class="flex flex-col items-stretch p-6 md:p-8 lg:p-16">
       <div class="flex items-center justify-between">
         <div class="inline">
-          <%= image_tag "logo/logo-dark.svg", alt: "logo-dark", loading: "lazy", class: "hidden dark:inline h-6" %>
-          <%= image_tag "logo/logo-light.svg", alt: "logo-light", loading: "lazy", class: "inline dark:hidden h-6" %>
+          <%= image_tag "logo/parts-sync-logo.svg", alt: "Parts Sync", loading: "lazy", class: "h-12" %>
         </div>
       </div>
 
