ファビコンの設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%# SVGファビコン - モダンブラウザ向け %>
+    <%= favicon_link_tag 'logo/favicon.svg', type: 'image/svg+xml' %>
+    <%# PNGファビコン - レガシーブラウザのフォールバック用 %>
+    <%= favicon_link_tag 'logo/favicon.png', type: 'image/png' %>
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
