--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -63,21 +63,21 @@
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <div class="grid grid-cols-2 gap-3">
             <div class="form-control">
-              <%= f.label :first_name, t('activerecord.attributes.user.first_name'), class: "label" %>
-              <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 ps-3">
-                <iconify-icon icon="lucide:user" class="text-base-content/80 w-4 h-4"></iconify-icon>
-                <%= f.text_field :first_name,
-                    placeholder: t('activerecord.attributes.user.first_name'),
-                    class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
-              </div>
-            </div>
-
-            <div class="form-control">
               <%= f.label :last_name, t('activerecord.attributes.user.last_name'), class: "label" %>
               <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 ps-3">
                 <iconify-icon icon="lucide:user" class="text-base-content/80 w-4 h-4"></iconify-icon>
                 <%= f.text_field :last_name,
                     placeholder: t('activerecord.attributes.user.last_name'),
+                    class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
+              </div>
+            </div>
+
+            <div class="form-control">
+              <%= f.label :first_name, t('activerecord.attributes.user.first_name'), class: "label" %>
+              <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 ps-3">
+                <iconify-icon icon="lucide:user" class="text-base-content/80 w-4 h-4"></iconify-icon>
+                <%= f.text_field :first_name,
+                    placeholder: t('activerecord.attributes.user.first_name'),
                     class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
               </div>
             </div>
@@ -95,12 +95,36 @@
 
           <div class="form-control mt-3">
             <%= f.label :password, t('activerecord.attributes.user.password'), class: "label" %>
-            <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 pe-3 ps-3" data-component="password-field">
+            <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 pe-3 ps-3" data-controller="password-field">
               <iconify-icon icon="lucide:key-round" class="text-base-content/80 w-4 h-4"></iconify-icon>
               <%= f.password_field :password,
                   placeholder: t('activerecord.attributes.user.password'),
-                  class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0" %>
-              <button id="toggle_password_field_type" type="button" data-slot-value="hide" data-slot="visibility-toggle" aria-label="Show/Hide password" class="group btn btn-circle btn-ghost btn-xs hover:bg-base-content/10">
+                  class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0",
+                  data: { password_field_target: "field" } %>
+              <button type="button"
+                      data-password-field-target="toggle"
+                      data-action="click->password-field#toggle"
+                      aria-label="Show/Hide password"
+                      class="group btn btn-circle btn-ghost btn-xs hover:bg-base-content/10">
+                <iconify-icon icon="lucide:eye" class="inline text-base-content/80 w-4 h-4 group-data-[slot-value=show]:hidden"></iconify-icon>
+                <iconify-icon icon="lucide:eye-off" class="inline text-base-content/80 w-4 h-4 group-data-[slot-value=hide]:hidden"></iconify-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="form-control mt-3">
+            <%= f.label :password_confirmation, t('activerecord.attributes.user.password_confirmation'), class: "label" %>
+            <div class="form-control flex flex-row items-center rounded-box border border-base-content/20 pe-3 ps-3" data-controller="password-field">
+              <iconify-icon icon="lucide:key-round" class="text-base-content/80 w-4 h-4"></iconify-icon>
+              <%= f.password_field :password_confirmation,
+                  placeholder: t('activerecord.attributes.user.password_confirmation'),
+                  class: "input input-sm w-full transition-all focus:border-transparent focus:outline-0 focus:outline-offset-0",
+                  data: { password_field_target: "field" } %>
+              <button type="button"
+                      data-password-field-target="toggle"
+                      data-action="click->password-field#toggle"
+                      aria-label="Show/Hide password"
+                      class="group btn btn-circle btn-ghost btn-xs hover:bg-base-content/10">
                 <iconify-icon icon="lucide:eye" class="inline text-base-content/80 w-4 h-4 group-data-[slot-value=show]:hidden"></iconify-icon>
                 <iconify-icon icon="lucide:eye-off" class="inline text-base-content/80 w-4 h-4 group-data-[slot-value=hide]:hidden"></iconify-icon>
               </button>
